--- a/A.tex
+++ b/A.tex
@@ -88,7 +88,7 @@ After the fault tree has been constructed, probabilities for the initial faults 
 
 After the risks are evaluated, different activities are required to mitigate the risks according to the risk index. After efforts made to reduce the risks, the risks should be re-evaluated to calculate the residual risk and analyze the risk/benefit. This is part of the risk control process.\todo{related to both the requirement hierarchy and model checking}
 \subsection{Clinical Trials}
-\todo{need some reference on this}Regardless of how rigorous the risk management and the device development process are, the devices have to be able to achieve their design goal on the real patient. Devices that have high risk factors, including the closed-loop medical devices, are required to submit clinical evidence for their safety and efficacy, often in form of clinical trials. In clinical trials the devices are used on carefully-selected group of patients following carefully designed protocols, trying to obtain unambiguous results which can support the safety and/or efficacy of the devices. 
+\todo{need some reference on this}Regardless of how rigorous the risk management and the device development process are, the devices have to be able to achieve their design goal on the real patient, which can only be evaluated in closed-loop with its physiological environment. Devices that have high risk factors, including the closed-loop medical devices, are required to submit clinical evidence for their safety and efficacy, often in form of clinical trials. In clinical trials the devices are used on carefully-selected population of patients following carefully-designed protocols, trying to obtain unambiguous results which can support the safety and/or efficacy of the devices. 
 %Through the course of the 1980s, software began to play an increasing role in medical devices. Software, as it turns out, is one of those technologies not anticipated by prior regulation, and was waiting for its disaster to prompt regulatory action. It wasn't until the 1980s when a number of cancer patients received massive X-ray overdoses during radiation therapy with the Therac-25 linear accelerator. This lead to a number of investigations, perhaps the most thorough of which was that of \cite{therac}, which was rich with identified ways software could go wrong. Inadequate testing, dangerous code reuse, configuration management issues, inadequate manufacturer response, and failure to get to the root cause of the problem were among the leaders of the problems identified. The Therac-25 was an eye-opener for the FDA and legislators, and resulted in the Safe Medical Device Act of 1990. This finally required closer medical device tracking, post-market surveillance and recommendations on development, testing and validation of medical device software. \todo{Are these useful?}
 
 %\subsection{Pre-market Submission Process}
