--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,7 +7,7 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 @article {ELT,
-author = {FURMAN, SEYMOUR and FISHER, JOHN D.},
+author = {Seymour Furman and John D. Fisher },
 title = {Endless Loop Tachycardia in an AV Universal (DDD) Pacemaker},
 journal = {Pacing and Clinical Electrophysiology},
 volume = {5},
@@ -405,14 +405,7 @@ year={2015}
 	Volume = {46},
 	Year = {2001}}
 
-@article{fiber,
-	Author = {E.W. Hsu and C.S. Henriquez},
-	Journal = {Journal of Cardiovascular Magnetic Resonance},
-	Number = {4},
-	Pages = {339-347},
-	Title = {{Myocardial Fiber Orientation Mapping Using Reduced Encoding Diffusion Tensor Imaging}},
-	Volume = {3},
-	Year = {2001}}
+
 
 @article{automotive_testing,
 	Author = {E. Bringmann and A. Kr\"amer},
