model checking chapter done; requirement chapter deleted

--- a/A.tex
+++ b/A.tex
@@ -65,8 +65,8 @@ Risk management is a core activity throughout the software development life cycl
 %The history of the FDA is a reactionary one, where each stage of evolution was in response to a major healthcare tragedy. 
 \begin{figure}[t]
 		\centering
-		\includegraphics[width=\textwidth]{figs/standards.jpg}
-		\caption{\small Figure of current medical devices}
+		\includegraphics[width=0.8\textwidth]{figs/standards.pdf}
+		\caption{\small International Standards Regarding Medical Device Safety}
 		\label{fig:standards}
 \end{figure}
 \subsection{Risk Management}
@@ -74,7 +74,7 @@ Risk management includes risk analysis, risk evaluation and risk control. Fault 
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=\textwidth]{figs/fta_new.pdf}
-		\caption{\small Figure of current medical devices}
+		\caption{\small Fault Tree Analys (FTA) Examples. (a) FTA for a hazard for a car; (b) FTA for a hazard in implantable pacemaker}
 		\label{fig:risks}
 \end{figure}
 
@@ -82,7 +82,7 @@ After the fault tree has been constructed, probabilities for the initial faults 
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=\textwidth]{figs/risk_analysis.pdf}
-		\caption{Risk analysis}
+		\caption{Top table: Risk index according to occurrence and severity. Bottom table: Risk control using risk index}
 		\label{fig:risk_ana}
 \end{figure}
 
