--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@ For closed-loop evaluation, a real-time Virtual Heart Model (VHM) has been devel
 
 \input{C.tex}
 
-\input{D.tex}
+%\input{D.tex}
 
 \input{E.tex}
 
