minor changes in Chapter 1

--- a/A.tex
+++ b/A.tex
@@ -88,7 +88,7 @@ After the fault tree has been constructed, probabilities for the initial faults 
 
 After the risks are evaluated, different activities are required to mitigate the risks according to the risk index. After efforts made to reduce the risks, the risks should be re-evaluated to calculate the residual risk and analyze the risk/benefit. This is part of the risk control process.\todo{related to both the requirement hierarchy and model checking}
 \subsection{Clinical Trials}
-\todo{need some reference on this}Regardless of how rigorous the risk management and the device development process are, the devices have to be able to achieve their design goal on the real patient, which can only be evaluated in closed-loop with its physiological environment. Devices that have high risk factors, including the closed-loop medical devices, are required to submit clinical evidence for their safety and efficacy, often in form of clinical trials. In clinical trials the devices are used on carefully-selected population of patients following carefully-designed protocols, trying to obtain unambiguous results which can support the safety and/or efficacy of the devices. 
+\todo{need some reference on this}Regardless of how rigorous the risk management and the device development process are, the devices have to be able to achieve their design goal on the real patient, which can only be evaluated in closed-loop with its physiological environment. Devices that have high risk factors, including the closed-loop medical devices, are required to submit clinical evidence for their safety and efficacy, often in form of clinical trials. In clinical trials the devices are used on carefully-selected population of patients following carefully-designed protocols, trying to obtain unambiguous results which can support the safety and/or efficacy of the devices. However, conducting clinical trials is very time consuming and expensive, and risks found during clinical trials are very expensive to fix. 
 %Through the course of the 1980s, software began to play an increasing role in medical devices. Software, as it turns out, is one of those technologies not anticipated by prior regulation, and was waiting for its disaster to prompt regulatory action. It wasn't until the 1980s when a number of cancer patients received massive X-ray overdoses during radiation therapy with the Therac-25 linear accelerator. This lead to a number of investigations, perhaps the most thorough of which was that of \cite{therac}, which was rich with identified ways software could go wrong. Inadequate testing, dangerous code reuse, configuration management issues, inadequate manufacturer response, and failure to get to the root cause of the problem were among the leaders of the problems identified. The Therac-25 was an eye-opener for the FDA and legislators, and resulted in the Safe Medical Device Act of 1990. This finally required closer medical device tracking, post-market surveillance and recommendations on development, testing and validation of medical device software. \todo{Are these useful?}
 
 %\subsection{Pre-market Submission Process}
@@ -144,8 +144,15 @@ After the risks are evaluated, different activities are required to mitigate the
    %
 %Formal methods have traditionally been used for verification of time-critical and safety-critical embedded systems \cite{form-meth}. Until recently, these methods have not been used for medical device certification. \cite{med-form3} presented the use of Extended Finite State Machines for model checking of a resuscitation device. Formal techniques have also been applied to improve medical device protocols (\cite{med-form2}) and safety (\cite{med-form1}), but the authors either used a simplified patient model or did not model the patient at all. 
 \section{Improve Medical Device Safety with Model-based design}
-Conducting clinical trials is very time consuming and expensive and risks found during clinical trials are very expensive to fix. Model-based design can potentially help during the development process and provide extra confidence to the device before conducting clinical trials. Computer models of human physiology have been developed which enable model-based closed-loop evaluations of the closed-loop medical devices. FDA is starting to recognize model simulation results as evidence for device safety and effectiveness. \cite{pancreas_paul} developed glucose-insulin models that can be used to evaluate control algorithms for artificial pancreas devices which can sense blood glucose and deliver insulin. Simulation results with the models have been recognized by FDA to replace animal trials, which significantly reduced cost (\cite{pancreas}).
-\subsection{Who do we represent?}
+Relying on clinical trials as the only closed-loop evaluation method to identify risks is not realistic. Model-based design has been proposed and applied in other industries like automobile (\cite{}), and can potentially help during the development process and provide extra confidence to the device before conducting clinical trials. However, unlike man-made systems like cars and aircrafts, physiological systems are less understood with larger variations. The lack of faithful models of physiological environment of the closed-loop medical devices is one of the reason that model-based design is not well-adopted in the medical device industry. 
+
+With developments of computational tools and understanding of human physiology, computational models of human physiology have been developed which enable model-based closed-loop evaluations of the closed-loop medical devices. FDA is starting to recognize model simulation results as evidence for device safety and effectiveness. \cite{pancreas_paul} developed glucose-insulin models that can be used to evaluate control algorithms for artificial pancreas devices which can sense blood glucose and deliver insulin. Simulation results with the models have been recognized by FDA to replace animal trials, which significantly reduced cost (\cite{pancreas}).
+\subsection{At Which Step Can We Help?}
+Research results should fit in the framework in the real world.
+Our work fits in the responsibilities of design validation teams in the device company.
+Assume we have design artifacts like specifications (written form or model form), requirements, software or even physical devices
+
+\section{Contributions}
 In this paper we use implantable pacemaker as example to demonstrate how model-based design can help improve the safety and efficacy of the implantable pacemaker during software development. We demonstrate the development process from the perspective of the verification team of device manufacturers, therefore we assume to have full access to the pacemaker software design. The pacemaker software design is referenced from a dual chamber pacemaker from Boston Scientific (\cite{compass}).
 
 Our proposed model-driven design (MDD) for closed-loop medical devices begins with developing heart models that can interact with real and modeled pacemakers (\cite{VHM_proc}). With the help of heart models, hazards themselves can be used as requirements directly and identify known and even unknown mechanisms that may trigger the hazards using techniques like model checking.
